WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35946
[chromium] Fix memory leak in WebImageDecoder API
https://bugs.webkit.org/show_bug.cgi?id=35946
Summary
[chromium] Fix memory leak in WebImageDecoder API
Kavita Kanetkar
Reported
2010-03-09 15:04:01 PST
Fix getFrameAtIndex() that causes leak in WebImage.
Attachments
proposed fix
(3.64 KB, patch)
2010-03-09 15:18 PST
,
Kavita Kanetkar
fishd
: review-
kkanetkar
: commit-queue-
Details
Formatted Diff
Diff
patch2
(2.67 KB, patch)
2010-03-11 14:01 PST
,
Kavita Kanetkar
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kavita Kanetkar
Comment 1
2010-03-09 15:18:38 PST
Created
attachment 50356
[details]
proposed fix 2-sided fix. Needs a downstream fix as well.
Darin Fisher (:fishd, Google)
Comment 2
2010-03-09 16:04:00 PST
Comment on
attachment 50356
[details]
proposed fix r- for reasons discussed in person. (sorry folks if you are following at home, you'll just have to guess)
Dimitri Glazkov (Google)
Comment 3
2010-03-09 16:30:43 PST
Was it the peanut butter?
Kavita Kanetkar
Comment 4
2010-03-11 14:01:29 PST
Created
attachment 50535
[details]
patch2 Thanks Darin, for the comments.
WebKit Commit Bot
Comment 5
2010-03-12 08:36:47 PST
Comment on
attachment 50535
[details]
patch2 Clearing flags on attachment: 50535 Committed
r55906
: <
http://trac.webkit.org/changeset/55906
>
WebKit Commit Bot
Comment 6
2010-03-12 08:36:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug