2010-03-12  Kavita Kanetkar  <kkanetkar@chromium.org>

Reviewed by Darin Fisher.

        [chromium] Fix memory leak in WebImageDecoder API
        https://bugs.webkit.org/show_bug.cgi?id=35946

        * src/WebImageDecoder.cpp:
        (WebKit::WebImageDecoder::setData):
        (WebKit::WebImageDecoder::getFrameAtIndex):

git-svn-id: svn://svn.chromium.org/blink/trunk@55906 bbb929c8-8fbe-4397-9dbb-9b2b20218538